--- a/src/Viettut/Bundles/WebBundle/Resources/public/css/custom.css
+++ b/src/Viettut/Bundles/WebBundle/Resources/public/css/custom.css
@@ -2,3 +2,32 @@
 .markdown-body pre {
     background-color: #dde !important;
 }
+
+textarea {
+    width: 100%;
+    height: 90%;
+}
+
+.hidden {
+    display:none !important;
+}
+
+.height200 {
+    height: 200px;
+}
+
+.height300 {
+    height: 300px;
+}
+
+.width100pc {
+    width: 100%;
+}
+
+.width90pc {
+    width: 90%;
+}
+
+.border-radius5 {
+    border-radius: 5px;
+}
