--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/addChapter.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/addChapter.html.twig
@@ -1,41 +1,19 @@
 {% extends 'base.html.twig' %}
 {% block controller %}ng-controller="ChapterController"{% endblock %}
 {% block main %}
-    <style>
-        textarea {
-            width: 100%;
-            height: 90%;
-        }
-
-        .pading-left-5 {
-            padding-left: 5px;
-        }
-
-        .pading-left-10 {
-            padding-left: 10px;
-        }
-
-        .padding-right-5 {
-            padding-right: 5px;
-        }
-
-        .padding-right-10 {
-            padding-right: 10px;
-        }
-    </style>
     <section class="page-top">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <ul class="breadcrumb">
                         <li><a href="{{ path('home_page') }}">Home</a></li>
-                        <li class="active"><a href="{{ path('course_index') }}">Courses</a></li>
+                        <li class="active"><a href="{{ path('course_index') }}">Khóa học</a></li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Add chapter</h1>
+                    <h1>Thêm chương</h1>
                 </div>
             </div>
         </div>
@@ -60,7 +38,7 @@
                                 {{ html | raw }}
                             </div>
                         </div>
-                        <div ng-init="courseId={{ course.id }}">{{ course.id }}</div>
+                        <div ng-init="courseId={{ course.id }}"></div>
                     </article>
                 </div>
             </div>
@@ -69,49 +47,62 @@
                 <div class="col-md-12">
                     <form class="form-horizontal" role="form" name="addChapter">
                         <div class="form-group">
-                            <label for="chapter">Chapter name *</label>
+                            <label for="chapter">Tên chương *</label>
                             <input type="text" value="" class="form-control" id="chapter" ng-model="header" required>
                         </div>
                         <div class="form-group">
-                            <label>Content *</label>
-                            <fieldset ng-if="showPreview">
-                                <legend>Preview</legend>
-                                <wiz-markdown content="content"></wiz-markdown>
-                            </fieldset>
-                            <hr>
-                            <wiz-markdown-editor content="content" maxlength="5000" rows="10" class="form-control" style="height: 300px;width: 100%;">
-                                <wiz-toolbar-button command="bold"><i class="fa fa-bold" data-toggle="tooltip" data-placement="top" title="Bold"></i></wiz-toolbar-button>
-                                <wiz-toolbar-button command="italic"><i class="fa fa-italic" data-toggle="tooltip" data-placement="top" title="Italic"></i></wiz-toolbar-button>
-                                <wiz-toolbar-button command="heading"><i class="fa fa-header" data-toggle="tooltip" data-placement="top" title="Header"></i></wiz-toolbar-button>
-                                <wiz-toolbar-button command="link"><i class="fa fa-link" data-toggle="tooltip" data-placement="top" title="Add Link"></i></wiz-toolbar-button>
-                                <wiz-toolbar-button command="img"><i class="fa fa-picture-o" data-toggle="tooltip" data-placement="top" title="Add Picture"></i></wiz-toolbar-button>
-                                <wiz-toolbar-button command="hr"><i class="fa fa-arrow-down" data-toggle="tooltip" data-placement="top" title="New Line"></i></wiz-toolbar-button>
-                                <wiz-toolbar-button command="ullist"><i class="fa fa-list-ul" data-toggle="tooltip" data-placement="top" title="Ul List"></i></wiz-toolbar-button>
-                                <wiz-toolbar-button command="ollist"><i class="fa fa-list-ol" data-toggle="tooltip" data-placement="top" title="Ol List"></i></wiz-toolbar-button>
-                                <wiz-toolbar-button command="code"><i class="fa fa-code" data-toggle="tooltip" data-placement="top" title="Code"></i></wiz-toolbar-button>
-                                <wiz-toolbar-button command="undo"><i class="fa fa-undo" data-toggle="tooltip" data-placement="top" title="Undo"></i></wiz-toolbar-button>
-                                <wiz-toolbar-button command="redo"><i class="fa fa-repeat" data-toggle="tooltip" data-placement="top" title="Redo"></i></wiz-toolbar-button>
-                            </wiz-markdown-editor>
+                            <div class="tabs">
+                                <ul class="nav nav-tabs">
+                                    <li class="active">
+                                        <a aria-expanded="false" href="#edit" data-toggle="tab"><i class="fa fa-star"></i>Chỉnh sửa</a>
+                                    </li>
+                                    <li>
+                                        <a aria-expanded="true" href="#preview" data-toggle="tab">Xem trước</a>
+                                    </li>
+                                </ul>
+
+                            </div>
+                            <div class="tab-content">
+                                <div id="edit" class="tab-pane active">
+                                    <label>Nội dung *</label>
+                                    <wiz-markdown-editor content="content" maxlength="5000" rows="10" class="form-control height300 width100pc">
+                                        <wiz-toolbar-button command="bold"><i class="fa fa-bold" data-toggle="tooltip" data-placement="top" title="Bold"></i></wiz-toolbar-button>
+                                        <wiz-toolbar-button command="italic"><i class="fa fa-italic" data-toggle="tooltip" data-placement="top" title="Italic"></i></wiz-toolbar-button>
+                                        <wiz-toolbar-button command="heading"><i class="fa fa-header" data-toggle="tooltip" data-placement="top" title="Header"></i></wiz-toolbar-button>
+                                        <wiz-toolbar-button command="link"><i class="fa fa-link" data-toggle="tooltip" data-placement="top" title="Add Link"></i></wiz-toolbar-button>
+                                        <wiz-toolbar-button command="img"><i class="fa fa-picture-o" data-toggle="tooltip" data-placement="top" title="Add Picture"></i></wiz-toolbar-button>
+                                        <wiz-toolbar-button command="hr"><i class="fa fa-arrow-down" data-toggle="tooltip" data-placement="top" title="New Line"></i></wiz-toolbar-button>
+                                        <wiz-toolbar-button command="ullist"><i class="fa fa-list-ul" data-toggle="tooltip" data-placement="top" title="Ul List"></i></wiz-toolbar-button>
+                                        <wiz-toolbar-button command="ollist"><i class="fa fa-list-ol" data-toggle="tooltip" data-placement="top" title="Ol List"></i></wiz-toolbar-button>
+                                        <wiz-toolbar-button command="code"><i class="fa fa-code" data-toggle="tooltip" data-placement="top" title="Code"></i></wiz-toolbar-button>
+                                        <wiz-toolbar-button command="undo"><i class="fa fa-undo" data-toggle="tooltip" data-placement="top" title="Undo"></i></wiz-toolbar-button>
+                                        <wiz-toolbar-button command="redo"><i class="fa fa-repeat" data-toggle="tooltip" data-placement="top" title="Redo"></i></wiz-toolbar-button>
+                                    </wiz-markdown-editor>
+                                </div>
+                                <div id="preview" class="tab-pane">
+                                    <wiz-markdown content="content" class="markdown-body"></wiz-markdown>
+                                </div>
+                            </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <button ladda-button="laddaLoading" data-style="slide-right" ng-disabled="!isAuthenticated && createGuide.$valid" ng-click="add()" class="ladda-button btn-primary" style="border-radius: 5px;">Add Chapter</button>
-                                <button ng-click="preview()" class="ladda-button btn-primary" style="border-radius: 5px;"><{ previewText }></button>
+                                <button ladda-button="laddaLoading" data-style="slide-right" ng-disabled="!isAuthenticated && createGuide.$valid" ng-click="add()" class="ladda-button btn-primary border-radius5">Thêm</button>
+                                <button ng-click="preview()" class="ladda-button btn-primary border-radius5"><{ previewText }></button>
                             </div>
                         </div>
-                        <div style="display:none" class="modal fade" id="add-chapter-success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal fade hidden" id="add-chapter-success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                        <h4 class="modal-title" id="myModalLabel">Confirm</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Xác nhận</h4>
                                     </div>
                                     <div class="modal-body">
-                                        Chapter "<{ header }>" has been created successfully !
+                                        Chương "<{ header }>" thêm thành công !
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" ng-click="goHome()">Home</button>
-                                        <button type="button" class="btn btn-primary" ng-click="addAnotherChapter()">Add another</button>
+                                        <button type="button" class="btn btn-primary" ng-click="addAnotherChapter()">Tiếp tục thêm</button>
                                     </div>
                                 </div>
                             </div>
@@ -126,8 +117,8 @@
                 <div class="sticky">
                     <h4>Chapters</h4>
                     <div class="list-group">
-                        <a href="#" class="list-group-item active"> Introduce </a>
-                        <a href="#" class="list-group-item" ng-repeat="chapter in course.chapters">Chapter <{ chapter.position }> : <{ chapter.header }></a>
+                        <a href="#" class="list-group-item active">Giới thiệu khóa học</a>
+                        <a href="#" class="list-group-item" ng-repeat="chapter in course.chapters">Chương <{ chapter.position }> : <{ chapter.header }></a>
                     </div>
                 </div>
             </aside>
