--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
@@ -1,12 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block controller %}ng-controller="CourseController"{% endblock %}
 {% block main %}
-    <style>
-        textarea {
-            width: 100%;
-            height: 90%;
-        }
-    </style>
     <section class="page-top">
         <div class="container">
             <div class="row">
@@ -28,7 +22,7 @@
                         <article class="post post-large blog-single-post">
                             <div class="post-image">
                                 <div class="img-thumbnail">
-                                    <img class="img-responsive" src="{{ course.imagePath }}" alt="image path">
+                                    <img class="img-responsive" src="{{ course.imagePath }}" alt="cover image">
                                 </div>
                             </div>
                             <div class="post-date">
@@ -49,7 +43,7 @@
                                     <span class="pull-right"><i class="fa fa-comments"></i> <a href="#">{{ course.comments | length }} Comments</a></span>
                                 </div>
                                 <hr class="tall"/>
-                                <textarea style="display: none;" id="introduce">{{ course.introduce }}</textarea>
+                                <textarea class="hidden" id="introduce">{{ course.introduce }}</textarea>
                                 <wiz-markdown content="introduce" class="markdown-body"></wiz-markdown>
                                 {% if lastChapter %}
                                     <div class="row">
@@ -149,7 +143,7 @@
                                             <div class="row">
                                                 <div class="form-group">
                                                     <div class="col-md-12">
-                                                        <wiz-markdown-editor content="content" maxlength="5000" rows="10" class="form-control" style="height: 200px;width: 90%;">
+                                                        <wiz-markdown-editor content="content" maxlength="5000" rows="10" class="form-control" class="height200 width90pc">
                                                         </wiz-markdown-editor>
                                                     </div>
                                                 </div>
@@ -161,8 +155,8 @@
                                                             data-style="slide-right"
                                                             ng-disabled="!isAuthenticated"
                                                             ng-click="addComment()"
-                                                            class="ladda-button btn-primary"
-                                                            style="border-radius: 5px;">Đăng</button>
+                                                            class="ladda-button btn-primary border-radius5"
+                                                            >Đăng</button>
                                                 </div>
                                             </div>
                                         </form>
@@ -178,18 +172,9 @@
                 {% include 'sidebar.html' %}
                 <aside class="sidebar">
                     <div class="sticky">
-                        <h4>Chương</h4>
-                        <ul class="nav nav-tabs nav-stacked">
-                            <li class="active">
-                                <a href="#">Giới thiệu khóa học</a>
-                            </li>
-                            {% for chapter in course.chapters %}
-                                <li>
-                                    <a href="{{ path('chapter_detail', {'username': username, 'hash': course.hashTag, 'cHash': chapter.hashTag}) }}" class="list-group-item">Chapter {{ chapter.position }} : {{ chapter.header }}</a>
-                                </li>
-                            {% endfor %}
-                        </ul>
+                        <h4>Danh sách các chương</h4>
                         <div class="list-group">
+                            <a href="#" class="list-group-item active">Giới thiệu khóa học</a>
                             {% for chapter in course.chapters %}
                                 <a href="{{ path('chapter_detail', {'username': username, 'hash': course.hashTag, 'cHash': chapter.hashTag}) }}" class="list-group-item">Chapter {{ chapter.position }} : {{ chapter.header }}</a>
                             {% endfor %}
