--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/edit.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/edit.html.twig
@@ -1,41 +1,19 @@
 {% extends 'base.html.twig' %}
 {% block controller %}ng-controller="CourseController"{% endblock %}
 {% block main %}
-    <style>
-        textarea {
-            width: 100%;
-            height: 90%;
-        }
-
-        .pading-left-5 {
-            padding-left: 5px;
-        }
-
-        .pading-left-10 {
-            padding-left: 10px;
-        }
-
-        .padding-right-5 {
-            padding-right: 5px;
-        }
-
-        .padding-right-10 {
-            padding-right: 10px;
-        }
-    </style>
     <section class="page-top">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <ul class="breadcrumb">
                         <li><a href="{{ path('home_page') }}">Home</a></li>
-                        <li class="active"><a href="{{ path('course_index') }}">Courses</a></li>
+                        <li class="active"><a href="{{ path('course_index') }}">Khóa học</a></li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Edit course</h1>
+                    <h1>Cập nhật khóa học</h1>
                 </div>
             </div>
         </div>
@@ -43,10 +21,15 @@
     <div class="container">
         <div ng-init="courseId={{ course.id }}"></div>
         <div class="row">
-            <div class="col-md-12">
-                <form class="form-horizontal" role="form" name="createGuide">
+            <div class="col-md-9">
+                <div class="progress" ng-show="loading">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                        <span class="sr-only">45% Complete</span>
+                    </div>
+                </div>
+                <form class="form-horizontal" role="form" name="createGuide" ng-hide="loading">
                     <div class="form-group">
-                        <label for="title">Title <span ng-show="titleValid">*</span></label>
+                        <label for="title">Tên khóa học <span ng-show="titleValid">*</span></label>
                         <input type="text" value="" class="form-control" name="title" id="title" ng-model="title" required>
                     </div>
                     <div class="form-group">
@@ -59,30 +42,30 @@
                         </tags-input>
                     </div>
                     <div class="form-group">
-                        <label for="image">Image</label><br>
-                        <button type="file" ngf-select="uploadFiles($file)" accept="image/*" ngf-max-height="1000" ngf-max-size="1MB" class="btn btn-primary">Change Image</button>
+                        <label for="image">Ảnh</label><br>
+                        <button type="file" ngf-select="uploadFiles($file)" accept="image/*" ngf-max-height="1000" ngf-max-size="1MB" class="btn btn-primary">Thay ảnh</button>
                         <div class="alert alert-danger" ng-if="uploadError">
                             <strong>Error !</strong> <{ uploadErrorMsg }>
                         </div>
                         <input type="hidden" name="image" id="image" ng-model="image">
                         <div>
-                            <img class="img-thumbnail" ng-src="<{ image }>" width="304">
+                            <img class="img-thumbnail" ng-src="<{ image }>" width="304" alt="preview">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="tabs">
                             <ul class="nav nav-tabs">
                                 <li class="active">
-                                    <a aria-expanded="false" href="#edit" data-toggle="tab"><i class="fa fa-star"></i> Editing</a>
+                                    <a aria-expanded="false" href="#edit" data-toggle="tab"><i class="fa fa-star"></i>Chỉnh sửa</a>
                                 </li>
                                 <li>
-                                    <a aria-expanded="true" href="#preview" data-toggle="tab">Preview</a>
+                                    <a aria-expanded="true" href="#preview" data-toggle="tab">Xem trước</a>
                                 </li>
                             </ul>
                             <div class="tab-content">
                                 <div id="edit" class="tab-pane active">
-                                    <label>Introduce</label>
-                                    <wiz-markdown-editor content="introduce" maxlength="5000" rows="10" class="form-control" style="height: 300px;width: 100%;">
+                                    <label>Giới thiệu khóa học</label>
+                                    <wiz-markdown-editor content="introduce" maxlength="5000" rows="10" class="form-control height300 width100pc">
                                         <wiz-toolbar-button command="bold"><i class="fa fa-bold" data-toggle="tooltip" data-placement="top" title="Bold"></i></wiz-toolbar-button>
                                         <wiz-toolbar-button command="italic"><i class="fa fa-italic" data-toggle="tooltip" data-placement="top" title="Italic"></i></wiz-toolbar-button>
                                         <wiz-toolbar-button command="heading"><i class="fa fa-header" data-toggle="tooltip" data-placement="top" title="Header"></i></wiz-toolbar-button>
@@ -104,16 +87,27 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <button ladda-button="laddaLoading" data-style="slide-right" ng-disabled="!isAuthenticated && createGuide.$valid" ng-click="create()" class="ladda-button btn-primary" style="border-radius: 5px;">Update</button>
-                            <button ng-click="preview()" class="ladda-button btn-primary" style="border-radius: 5px;"><{ previewText }></button>
+                            <button ladda-button="laddaLoading" data-style="slide-right" ng-disabled="!isAuthenticated && createGuide.$valid" ng-click="create()" class="ladda-button btn-primary border-radius5">Cập nhật</button>
                         </div>
                     </div>
                 </form>
+            </div>
+            <div class="col-md-3">
+                <aside class="sidebar">
+                    <div class="sticky">
+                        <h4>Danh sách các chương</h4>
+                        <div class="list-group">
+                            <a href="#" class="list-group-item active">Giới thiệu khóa học</a>
+                            {% for chapter in course.chapters %}
+                                <a href="{{ path('chapter_detail', {'username': course.author.username, 'hash': course.hashTag, 'cHash': chapter.hashTag}) }}" class="list-group-item">Chapter {{ chapter.position }} : {{ chapter.header }}</a>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </aside>
             </div>
         </div>
     </div>
 {% endblock %}
 {% block custom %}
-    <script src="{{ asset('bundles/viettutweb/js/controller/course/comment.js') }}"></script>
     <script src="{{ asset('bundles/viettutweb/js/controller/course/edit/course.js') }}"></script>
 {% endblock %}
