--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/index.html.twig
@@ -1,12 +1,6 @@
 {% extends 'base.html.twig' %}
-{% block controller %}CourseController{% endblock %}
+{% block controller %}ng-controller="CourseController"{% endblock %}
 {% block main %}
-    <style>
-        textarea {
-            width: 100%;
-            height: 90%;
-        }
-    </style>
     <section class="page-top">
         <div class="container">
             <div class="row">
